fix: validate policy ID before creating permissions and improve logging in transaction helper